More fixes on webkit sidebar alignment in portrait mode.

--- a/src/La/LearnodexBundle/Resources/public/css/main.css
+++ b/src/La/LearnodexBundle/Resources/public/css/main.css
@@ -47,8 +47,8 @@ textarea {
 
 @media all and (max-width: 992px), (orientation: portrait) {
     #viewport-area {
-        flex-wrap: wrap;
-        -webkit-flex-wrap: wrap;
+        flex-flow: column wrap;
+        -webkit-flex-flow: column wrap;
     }
 }
 
